--- a/static/app.css
+++ b/static/app.css
@@ -1,5 +1,6 @@
-.rcontainer {
-    background-color: white;
+body {
+    background-size: 100% 100%;;
+    background-image: url("/static/ftruck.jpg")
     
 }
 
